--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.10.5",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
@@ -22,4 +23,3 @@
     "nodemon": "^3.1.4"
   }
 }
-
