--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
-    "concurrently": "^8.2.2"
+    "web-vitals": "^2.1.4"
   }
 }
