--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.2",
-    "web-vitals": "^2.1.4",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "web-vitals": "^2.1.4"
   }
 }
